--- a/index.html
+++ b/index.html
@@ -368,16 +368,16 @@
         <a class="btn" href="normativa.html">Abrir herramienta</a>
       </article>
 
-      <!-- 3. CALENDARIO -->
-      <article class="card">
-        <div class="card-header">
-          <img src="img/herramientas.png" alt="icono">
-          <h2>Calendario escolar</h2>
-        </div>
-        <img class="card-image" src="img/tarjetas/calendario.png" alt="Calendario">
-        <p>Calendario escolar interactivo con festivos, eventos y periodos lectivos.</p>
-        <a class="btn" href="calendario.html">Abrir herramienta</a>
-      </article>
+      <!-- 3. CALENDARIOS -->
+<article class="card">
+  <div class="card-header">
+    <img src="img/herramientas.png" alt="icono">
+    <h2>Calendarios</h2>
+  </div>
+  <img class="card-image" src="img/tarjetas/calendario.png" alt="Calendarios">
+  <p>Calendario escolar, laboral y celebraciones pedagógicas en formato interactivo.</p>
+  <a class="btn" href="calendario.html">Abrir herramienta</a>
+</article>
 
       <!-- 4. CONSULTAS -->
       <article class="card">
@@ -519,3 +519,4 @@
 
 </body>
 </html>
+
